[tool.poetry]
name = "reactive-word-cloud"
version = "0.1.0"
description = ""
authors = ["Jack Leow"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.0.1"
confluent-kafka = "^2.5.0"
packaging = "^24.1"
typing-extensions = "^4.12.2"

[tool.poetry.scripts]
server = "reactive_word_cloud.server:main"

[tool.poetry.group.dev.dependencies]
types-confluent-kafka = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strict = ["reactive_word_cloud"]
