[project]
name = "reactive-word-cloud-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11.0",
    "dacite>=1.8.1",
    "pyright>=1.1.384",
    "typing-extensions>=4.12.2",
    "websockets>=13.0.1",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.380",
    "types-confluent-kafka>=1.2.2",
]

[tool.pyright]
strict = ["."]
exclude = ["reactivex", ".venv"]
